# screc

./: AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/devices/: enumerate.rs  mod.rs
src-tauri/src/export/: mod.rs  model.rs  render.rs
src-tauri/src/ffmpeg/: mod.rs  resolver.rs  runner.rs
src-tauri/src/media/: assets.rs  mod.rs  probe.rs
src-tauri/src/recording/: capture.rs  config.rs  mod.rs  session.rs
src/recorder/: constants.ts  primitives.tsx
src/shared/: editorStore.ts  ipc.ts  sessionLoader.ts  types.ts  ui.tsx  usePersistentState.ts  utils.ts
src/views/: Editor.tsx  RecorderSettings.tsx  RegionSelector.tsx  Widget.tsx
src/views/editor/: ExportDialog.tsx  Inspector.tsx  PreviewPlayer.tsx  Timeline.tsx
